fix spacing

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -543,7 +543,8 @@
     }
     .hero-container {
         padding-top: 40px;
-        height: 50vh;
+        height: 55vh;
+        margin-bottom: 50px;
     }
     
     .why-section{
